feat: Replace DTOs with direct model usage and implement JSON views for `Atividade` and `Conhecimento`.